# groupme-rust-stats

./: .gitignore  Cargo.toml  README.md  Settings.default.toml
src/: main.rs
src/api_readers/: groupme_api_reader.rs  mod.rs
src/file_handlers/: formatted_results.rs  mod.rs  raw_messages.rs
src/groupme_api_structs/: api_response.rs  attachment.rs  data.rs  data_response.rs  message.rs  meta.rs  mod.rs
src/results_handlers/: mod.rs  result_handler.rs
src/sheets_api_structs/: credentials.rs  mod.rs
src/stat_structs/: mod.rs  user_stats.rs
src/stats_engine/: mod.rs  user_stat.rs
