[package]
name = "groupme-rust-client"
version = "0.1.0"
authors = ["taylorjbrown <taylorjbrown@protonmail.com>"]
edition = "2018"


[dependencies]
config = "0.9"
reqwest = "0.9.22"
tokio = "0.1.18"
futures = "0.1"
error-chain="0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.102"
serde_json = "1.0.41"
glob = "0.3.0"
rayon = "1.2.0"
indexmap = "1.3.0"
csv = "1.0.0-beta.1"
chrono = "0.4.10"